<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_city"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/city"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/weather_sunny"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/tv_weather_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_x"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_weather_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/weather_y"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/weather"
        android:textColor="@color/white"
        android:textSize="14sp"/>
</LinearLayout>